--- a/practice-app/src/App.css
+++ b/practice-app/src/App.css
@@ -36,3 +36,39 @@
     transform: rotate(360deg);
   }
 }
+
+.pod {
+  background-color: rgb(70, 70, 70);
+}
+
+.imagePod {
+  border-radius: 5px;
+}
+
+.explaination {
+  display: flex;
+  justify-content: center;
+  margin: 2% 0;
+
+}
+
+.paragraph {
+  background-color: lightblue;
+  max-width: 80%;
+  border-radius: 5px;
+  border: 3px black solid;
+}
+
+.paragraph legend {
+  font-size: large;
+  font-weight: bold;
+  color: white;
+  padding: 0 2%;
+  background-color: rgb(26, 26, 26);
+  border: 3px rgb(0, 0, 0) solid;
+  border-radius: 5px;
+}
+
+.paragraph p {
+  padding: 2%;
+}
